<resources>
    <string name="app_name">My Application</string>
    <string name="logo">Loja de Móveis</string>
    <string name="login">Login</string>
    <string name="user">Usuário:</string>
    <string name="nome">Nome</string>
    <string name="pass">Senha:</string>
    <string name="senha">Senha</string>
    <string name="btnlog">ENTRAR</string>
    <string name="cadastro">CADASTRAR MÓVEL</string>
    <string name="oferta">OFERTA</string>
    <string name="table">SUA MESA</string>
    <string name="cadCad">Cadastro</string>
    <string name="tpmovel">Tipo:</string>
    <string name="medida">Medidas:</string>
    <string name="preco">Preço:</string>
    <string name="cor">Cor:</string>
    <string name="material">Material:</string>
    <string name="codigo">Seu Código:</string>
    <string name="httpmovel">Tipo</string>
    <string name="htmedida">XX,XX,XX</string>
    <string name="htpreco">XXX,xx</string>
    <string name="htcor">Cor</string>
    <string name="htmaterial">Material</string>
    <string name="htcodigo">XX</string>
    <string name="btnenviar">ENVIAR</string>
    <string name="txtoferta">Oferta</string>
    <string name="imgarmario">imagem de armario</string>
    <string name="descarmario1">Kit armário de cozinha</string>
    <string name="descarmario2">Madeira/mármore</string>
    <string name="descarmario3">Branco/bege</string>
    <string name="descarmario4">Por apenas R$699,99</string>
    <string name="mesa">Sua Mesa</string>
    <string name="descmesa">mesa inteira</string>
    <string name="wellcome">Bem Vindo(a),</string>
    <string name="btncomp">COMPRAR</string>
    <string name="btnfoto">Tirar Foto do Móvel</string>
    <string name="descfoto">Foto do móvel</string>
    <string name="btnBack">Voltar</string>
    <string name="desmesaactivity">(Não sacuda ela!)</string>
</resources>
