<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".Cadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/cadCad"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@color/preto" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tpmovel"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/httpmovel"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="25dp"
                android:layout_height="39dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medida"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/htmedida"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/htpreco"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="42dp"
                android:layout_height="39dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cor"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/htcor"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/htmaterial"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/htcodigo"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fundo"
                android:text="@string/btnenviar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>